# redshift-iam-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: iam_provider.rs  lib.rs  redshift.rs  saml_provider.rs
tests/: test.rs
