[package]
name = "redshift-iam"
version = "0.1.0"
edition = "2024"
description = "SAML/IAM authentication for Amazon Redshift via PingFederate or AWS STS"
authors = ["Jaroslav Cerman"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/antivirak/redshift-iam-rs"
keywords = ["redshift", "saml", "iam", "authentication", "sso"]
categories = ["authentication", "database"]

[dependencies]
anyhow = {
    version = "1",
    features = ["backtrace"],
}
arrow = "54.3"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-redshift = { version = "1.101", features = ["behavior-version-latest"] }
aws-sdk-sts = "1.101"
base64 = "0.22"
connectorx = {
    version = "0.4",
    features = ["dst_arrow", "src_postgres"],
}
log = "0.4"
regex = "1.12"
reqwest = { version = "0.13", features = [
    "cookies",
    "form",
] }
secrecy = "0.10"
scraper = "0.26"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
